update to files for AWS synth

--- a/aws/zcash_fpga/verif/scripts/Makefile
+++ b/aws/zcash_fpga/verif/scripts/Makefile
@@ -19,7 +19,7 @@ else
 $(info VIVADO_TOOL_VERSION = $(VIVADO_TOOL_VERSION))
 endif
 
-export ZCASH_DIR = /home/bsdevlin/zcash-fpga
+export ZCASH_DIR ?= /home/bsdevlin/zcash-fpga
 
 export TEST ?= test_null
 export C_TEST ?= test_null
