--- a/aws/cl_zcash/software/runtime/Makefile
+++ b/aws/cl_zcash/software/runtime/Makefile
@@ -20,7 +20,7 @@ INCLUDES += -I $(HDK_DIR)/common/software/include
 INCLUDES += -I ./include
 
 CC = gcc
-CFLAGS = -DCONFIG_LOGLEVEL=4 -g -Wall $(INCLUDES) -lstdc++
+CFLAGS = -DCONFIG_LOGLEVEL=4 -g -Wall $(INCLUDES) -lstdc++ -std=c++11
 
 LDLIBS = -lfpga_mgmt -lrt -lpthread
 
