--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//ip_cores/ec/src/rtl/ec_fp12_arithmetic.sv=UTF-8
 encoding//ip_cores/ec/src/rtl/ec_fp2_arithmetic.sv=UTF-8
 encoding//ip_cores/ec/src/rtl/ec_fp6_arithmetic.sv=UTF-8
